[tool.poetry]
name = "technorely_etl"
version = "0.1.0"
description = "Python command line utility that will create a database and perform a basic ETL process upon it"
authors = ["Artur Kutsevol <arthur.kutsevol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
sqlalchemy = "^1.3"
ndjson = "^0.2.0"
fastjsonschema = "^2.14"
python-decouple = "^3.3"
psycopg2 = "^2.8"
click = "^7.0"
invoke = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
